# Tourism_multi-agent

./: .gitignore
intelligent-travel-planner/: .env.example  README.md  agent_test.py  main.py  pyproject.toml  simple_app.py  simple_coordinator.py  unified_app.py  unified_coordinator.py  web_app.py
intelligent-travel-planner/agents/: __init__.py  base.py
intelligent-travel-planner/agents/accommodation/: __init__.py  agent.py  tools.py
intelligent-travel-planner/agents/budget/: __init__.py  agent.py  tools.py
intelligent-travel-planner/agents/food/: __init__.py  tools.py
intelligent-travel-planner/agents/itinerary/: __init__.py  agent.py  tools.py
intelligent-travel-planner/agents/transportation/: __init__.py  agent.py  tools.py
intelligent-travel-planner/config/: __init__.py  settings.py
intelligent-travel-planner/data/: __init__.py  mock_data.py  models.py
intelligent-travel-planner/data/memory/: conversation_test_session.json  profile_default.json  profile_test_user.json
intelligent-travel-planner/modules/: __init__.py  evaluation.py  execution.py  memory.py  planning.py  tools.py
intelligent-travel-planner/orchestration/: __init__.py  coordinator.py  state.py
intelligent-travel-planner/tests/: __init__.py  test_workflow.py
intelligent-travel-planner/utils/: __init__.py  amap_api.py  intent_parser.py  llm.py  logger.py  meituan_api.py
